Fix text alignment on mobile view on quiz template page

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -77,6 +77,9 @@ body, html {
 
   /* mobile */
   @media (min-width: 320px) and (max-width: 480px) {
+    .quiz-text {
+      text-align: center;
+    }
    /* .bg {
     background-size: cover; */
    }
